    - is_odd(n)                       is n an odd integer (not divisible by 2)
    - is_even(n)                      is n an even integer (divisible by 2)
    - is_divisible(n,d)               is n exactly divisible by d
    - is_congruent(n,c,d)             is n congruent to c mod d
    - is_qr(a,n)                      is a a quadratic non-residue mod n
    - almost_primes(k,[start,]end)    array ref of k-almost-primes
    - almost_prime_count(k,n)         count of integers with exactly k factors
    - almost_prime_count_approx(k,n)  fast approximate k-almost-prime count
    - almost_prime_count_lower(k,n)   fast k-almost-prime count lower bound
    - almost_prime_count_upper(k,n)   fast k-almost-prime count upper bound
    - nth_almost_prime(k,n)           The nth number with exactly k factors
    - nth_almost_prime_approx(k,n)    fast approximate nth k-almost-prime
    - nth_almost_prime_lower(k,n)     fast nth k-almost-prime lower bound
    - nth_almost_prime_upper(k,n)     fast nth k-almost-prime upper bound
    - foralmostprimes {} k,a,b        loop over k-almost-primes
    - omega_primes(k,[start,]end)     array ref of k-omega-primes
    - omega_prime_count(k,n)          count nums divisible by exactly k primes
    - nth_omega_prime(k,n)            The nth number dvsbl by exactly k primes
    - powerful_numbers([lo,]hi[,k])   array ref of k-powerful from lo to hi
    - powerful_count(n[,k])           count of k-powerful numbers <= n
    - nth_powerful(n[,k])             the nth k-powerful number (default k=2)
    - powerfree_count(n[,k])          count of k-powerfree numbers <= n
    - nth_powerfree(n[,k])            The nth k-powerfree number (default k=2)
    - powerfree_sum(n[,k])            sum of k-powerfree numbers <= n
    - powerfree_part(n[,k])           remove excess powers from n
    - powerfree_part_sum(n[,k])       sum of k-powerfree parts for 1 to n
    - squarefree_kernel(n)            integer radical of |n|